Fixed Charts zoom text color in dark mode.

--- a/frontend/themes/froniusvizualizer/components/vaadin-chart.css
+++ b/frontend/themes/froniusvizualizer/components/vaadin-chart.css
@@ -10,3 +10,7 @@
     stroke-width: 4px;
     stroke-dasharray: 0, 0;
 }
+
+:where([styled-mode]) .highcharts-label text {
+    fill: var(--lumo-primary-text-color);
+}
